plugins {
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'org.liquibase.gradle' version '2.2.0' apply false
}

group = 'com.retailmanagement'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}


repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Database
    // PostgreSQL Driver - MUST be runtime only, not compile
    runtimeOnly 'org.postgresql:postgresql:42.6.0'

    // OR if you need it for compilation too:
    implementation 'org.postgresql:postgresql:42.6.0'

    // JWT Authentication
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    
    // OpenAPI / Swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    // MapStruct for DTO mapping - uncommented and properly configured
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // Lombok-MapStruct binding for smooth integration
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

    implementation 'org.apache.poi:poi-ooxml:5.2.1'
    implementation 'com.itextpdf:itext7-core:7.2.3'

    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

    // Liquibase for database migrations
    implementation 'org.liquibase:liquibase-core'
    
    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    
    // JUnit Platform for test execution
    testImplementation 'org.junit.platform:junit-platform-launcher'
    testRuntimeOnly 'org.junit.platform:junit-platform-engine'
}


tasks.named('compileJava') {
    options.compilerArgs.addAll('-parameters', '-Xlint:unchecked', '-Xlint:deprecation')
    // Disable incremental compilation for Lombok compatibility
    options.incremental = false
}

tasks.named('test') {
    useJUnitPlatform()
    failOnNoDiscoveredTests = false
}

tasks.named('processResources') {
    duplicatesStrategy = 'exclude'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs << '-Amapstruct.defaultComponentModel=spring'
    options.compilerArgs << '-parameters'
    options.encoding = 'UTF-8'

    // Java 21 specific settings
    options.fork = true
    options.forkOptions.jvmArgs += [
        '-Dorg.gradle.internal.publish.checksums.insecure=true',
        '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--enable-native-access=ALL-UNNAMED'
    ]
}


if (project.hasProperty('liquibase')) {
    apply plugin: 'org.liquibase.gradle'

    liquibase {
        activity(name: 'main') {
            changelogFile = 'src/main/resources/db/changelog/db.changelog.yaml'
            url = 'jdbc:postgresql://localhost:5432/retail_management_db?currentSchema=retail_management_schema'
            username = 'postgres'
            password = 'password'
            driver = 'org.postgresql.Driver'
        }
    }
}

sourceSets {
    main {
        resources {
            srcDirs "src/main/resources"
        }
    }
}